worked on mod2 coding assignment; fixed everything except text containment on mobile devices

--- a/Mod2-solution/css/mod2-solution.css
+++ b/Mod2-solution/css/mod2-solution.css
@@ -4,8 +4,7 @@ body {
 
 * {
 box-sizing: border-box;
-padding: 20px;
-align-self: stretch;
+margin: 10px;
 }    
 
 h1 {
@@ -14,16 +13,13 @@ h1 {
     font-size: 2.5em;
 }
 
-/* div#container {
-    background-color */
-
 p {
     margin-right:25px;
     margin-bottom: 25px;
     border: 1px solid rgb(22, 21, 21);
-    padding: 20px;
+    padding: 25px;
     width: 100%;
-    height: 150px;
+    height: auto;
     font-family: 'Trebuchet MS';
     color: rgb(11, 61, 61);
     }
@@ -34,6 +30,7 @@ p {
     float: left;
     font-size: auto;
     width: 350px;
+    height: fit-content;
     }
 
 #p2 {
@@ -41,6 +38,7 @@ p {
     float: left;
     font-size: auto;
     width: 350px;
+    height: fit-content;
     }
 
 #p3 {
@@ -48,11 +46,19 @@ p {
     float: left;
     font-size: auto;
     width: 350px;
+    height: fit-content;
     }
 
-section {
-    clear: left;
-    }
+span.menu {
+    float: right;
+    border: 1px solid black;
+    margin: -26px;
+    width: 90px;
+    text-align: center;
+    color: #FFF;
+    background-color: #9D080D;
+    padding: 3px;
+}
 
 /* Simple Responsive Framework */
 .row {
@@ -74,14 +80,17 @@ section {
 
 /*********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
+    h1 {
+        font-size: large;
+    }
     #p1 {
-        width: 50%;
+        width: 300px;
         }
     #p2 {
-        width: 50%;
+        width: 300px;
         }
     #p3 {
-        width: 50%;
+        width: 80%;
         }
 body {
     background-color: rgb(178, 178, 231);
@@ -90,14 +99,17 @@ body {
 
 /********** Small devices only ************/
 @media (min-width: 320px) and (max-width: 767px) {
+    h1 {
+        font-size: medium;
+    }
     #p1 {
-        width: 30%;
+        width: 70%;
     }
     #p2 {
-        width: 30%;
+        width: 70%;
         }
     #p3 {
-        width: 30%;
+        width: 70%;
     }
 body {
     background-color: rgb(149, 211, 211);
