--- a/Mod2-solution/css/test.css
+++ b/Mod2-solution/css/test.css
@@ -10,17 +10,15 @@ margin: 10px;
 h1 {
     margin-bottom: 15px;
     text-align: center;
+    font-family: Georgia;
     font-size: 2.5em;
 }
 
-/* div#container {
-    background-color */
-
 p {
-    margin-right:25px;
+    margin-right: 25px;
     margin-bottom: 25px;
     border: 1px solid rgb(22, 21, 21);
-    padding: 15px;
+    padding: 25px;
     width: 100%;
     height: auto;
     font-family: 'Trebuchet MS';
@@ -33,7 +31,7 @@ p {
     float: left;
     font-size: auto;
     width: 350px;
-    height: fit-content;
+    height: 100px;
     }
 
 #p2 {
@@ -41,7 +39,7 @@ p {
     float: left;
     font-size: auto;
     width: 350px;
-    height: fit-content;
+    height: 100px;
     }
 
 #p3 {
@@ -49,12 +47,40 @@ p {
     float: left;
     font-size: auto;
     width: 350px;
-    height: fit-content;
+    height: 100px;
     }
 
-section {
-    clear: left;
-    }
+span.menu1 {
+    float: right;
+    border: 1px solid black;
+    margin: -26px;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    background-color: #9D080D;
+    padding: 3px;
+}
+span.menu2 {
+    float: right;
+    border: 1px solid black;
+    margin: -26px;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    background-color: #0f6416;
+    padding: 3px;
+}
+
+span.menu3 {
+    float: right;
+    border: 1px solid black;
+    margin: -26px;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    background-color: #0a0957;
+    padding: 3px;
+}
 
 /* Simple Responsive Framework */
 .row {
